# Intelligent-Internal-Knowledge-Assistant

./: .gitignore  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  speech.txt
Agent/: doc_agent.py  document_processor.py  file_scanner.py  gitTest.ipynb  model.py  tasks.py  test.ipynb
Agent/tools/: document_loader.py  gitTool.py  pdf_tool.py  retriver_tool.py  slackTool.py
MCP_Agent/: database.py  test.ipynb
Multimodal_AGent/tools/: ocr.py  video.py
Slack_Agent/tools/: slack.py
config/: settings.py
tools/: document_loader.py  pdf_tool.py  slack.py
utils/: embedding.py
