[project]
name = "inquiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone>=0.2.11",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.5",
    "langserve>=0.3.1",
    "nltk>=3.9.1",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "slack-sdk>=3.36.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
